--- a/pom.xml
+++ b/pom.xml
@@ -48,15 +48,35 @@
             <version>2.1.2.RELEASE</version>
         </dependency>
 
-<!--              <dependency>-->
-<!--                      <groupId>org.springframework.boot</groupId>-->
-<!--                      <artifactId>spring-boot-starter-security</artifactId>-->
-<!--                  </dependency>-->
-<!--             <dependency>-->
-<!--                     <groupId>org.thymeleaf.extras</groupId>-->
-<!--                     <artifactId>thymeleaf-extras-springsecurity5</artifactId>-->
-<!--                     <version>3.0.4.RELEASE</version>-->
-<!--                 </dependency>-->
+              <dependency>
+                      <groupId>org.springframework.boot</groupId>
+                      <artifactId>spring-boot-starter-security</artifactId>
+                  </dependency>
+             <dependency>
+                     <groupId>org.thymeleaf.extras</groupId>
+                     <artifactId>thymeleaf-extras-springsecurity5</artifactId>
+                     <version>3.0.4.RELEASE</version>
+                 </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     
